# cyber-pass-scrabble

./: .gitignore  README.md  app.py  index.html  models.py  pyproject.toml  replit.nix
static/css/: style.css
static/data/: german_words.js  scrabble_words.js
static/js/: animations.js  matrix_rain.js  password_generator.js  sound_effects.js  word_filter.js
templates/: index.html
