[project]
name = "repl-nix-wordforge-passgen"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "geoip2>=4.8.1",
    "twilio>=9.4.1",
    "trafilatura>=2.0.0",
]
